; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libkern/zlib/extr_zutil.c_zcalloc.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libkern/zlib/extr_zutil.c_zcalloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @zcalloc(i64 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i64, i64* %4, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %16

10:                                               ; preds = %3
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* %6, align 4
  %13 = sub i32 %11, %12
  %14 = load i32, i32* %5, align 4
  %15 = add i32 %14, %13
  store i32 %15, i32* %5, align 4
  br label %16

16:                                               ; preds = %10, %3
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* %6, align 4
  %19 = mul i32 %17, %18
  %20 = call i64 @malloc(i32 %19)
  store i64 %20, i64* %7, align 8
  %21 = load i64, i64* %7, align 8
  %22 = load i32, i32* %5, align 4
  %23 = load i32, i32* %6, align 4
  %24 = mul i32 %22, %23
  %25 = call i32 @bzero(i64 %21, i32 %24)
  %26 = load i64, i64* %7, align 8
  ret i64 %26
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @bzero(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
